Bug 114872 - Broken selection from other user
Summary: Broken selection from other user
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-06 19:48 UTC by Tamás Zolnai
Modified: 2018-01-08 08:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot showing that selection moved from the "world" word after inserting an empty line before the text (90.95 KB, image/png)
2018-01-06 19:48 UTC, Tamás Zolnai
Details
Screenshot showing selection problem (63.65 KB, image/png)
2018-01-06 19:53 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2018-01-06 19:48:55 UTC
Created attachment 138926 [details]
Screenshot showing that selection moved from the "world" word after inserting an empty line before the text

When one user do an operation (add some text before) which moves the other user's selection, the displayed selection rectangle is not updated.

Steps to reproduce
1. Open a text document with some text
2. Select part of the text in view 1
3. In view 2 insert an empty line before the text

Actual behavior: selection is not updated and not moved with the text.

Expected behavior: selection rectangle should move with the text.
Comment 1 Tamás Zolnai 2018-01-06 19:53:36 UTC
Created attachment 138927 [details]
Screenshot showing selection problem
Comment 2 Commit Notification 2018-01-07 13:39:06 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b8713ea0c0290ed2a4d711f44bf9a19b214bb62

tdf#114872: Broken selection from other user

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.