tdf#114872: Broken selection from other user

For desktop LO cursor update is restricted to the active
view, but for LO online the users's selection is shown also
from other views.

Change-Id: Ia9bc8854ee570a9a22c183bf27f941ecf0b8e4d9
Reviewed-on: https://gerrit.libreoffice.org/47520
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 0b8713ea0c0290ed2a4d711f44bf9a19b214bb62)